--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,21 @@
 # Site settings
-title: Your Blog
-SEOTitle: 你的博客 | Your Blog
+title: Jam Blog
+SEOTitle: Jam的博客 | Jam Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: hxjiamiao@126.com
 description: ""
 keyword: ""
-url: "http://huangxuan.me"              # your host, for absolute URL
+url: "http://serilesjam.github.io"      # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-#twitter_username:  huxpro
-facebook_username:  huxpro
+weibo_username:     Jam
+zhihu_username:     Jam
+github_username:    Jam
+facebook_username:  hxjiamiao
 
 
 
@@ -61,7 +60,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: ""
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
